Fixed error when updating book and author, fixed swagger.json
