# controllers/books.js
@@ -30,7 +30,7 @@ exports.create = (req, res) => {
         .catch((err) => {
             res.status(500).send({
                 message:
-                err.message || 'Some error occured while creating the book.',
+                    err.message || 'Some error occured while creating the book.',
             });
         });
 };
@@ -49,7 +49,7 @@ exports.findAll = (req, res) => {
             book_pages: 1,
         }
     )
-        .then ((data) => {
+        .then((data) => {
             res.send(data);
         })
         .catch((err) => {
@@ -63,26 +63,26 @@ exports.findAll = (req, res) => {
 // Find a single book with an id
 exports.findOne = (req, res) => {
     // #swagger.tags=["Books"]
-    const book_id =req.params.book_id;
+    const book_id = req.params.book_id;
     Book.findById(book_id)
-    .then((data) => {
-        if (!data)
-            res
-            .status(404)
-            .send({ message: "No book found with id " + book_id });
-        else res.send(data);
-    })
-    .catch((err) => {
-        res.status(500).send({
-            message: "Error retrieving Book with book_id " + book_id,
+        .then((data) => {
+            if (!data)
+                res
+                    .status(404)
+                    .send({ message: "No book found with id " + book_id });
+            else res.send(data);
+        })
+        .catch((err) => {
+            res.status(500).send({
+                message: "Error retrieving Book with book_id " + book_id,
+            });
         });
-    });
 };
 
 // update an existing book
 exports.updateBook = (req, res) => {
     // #swagger.tags=["Books"]
-    const book_id = req.header('book_id');
+    const book_id = req.params.book_id;
 
     // validate request body
     if (!book_id) {
@@ -91,7 +91,7 @@ exports.updateBook = (req, res) => {
 
     // validate book_id
     if (!mongoose.Types.ObjectId.isValid(book_id)) {
-        return res.status(400).send({ message: "Invalid book ID!"});
+        return res.status(400).send({ message: "Invalid book ID!" });
     }
 
     // Use findByIdAndUpdate to update one book
@@ -103,7 +103,7 @@ exports.updateBook = (req, res) => {
         .then((data) => {
             if (!data) {
                 // if no book was found with the provided ID
-                return res.status(404).send({ message: 'No book found with id: ' + book_id});
+                return res.status(404).send({ message: 'No book found with id: ' + book_id });
             }
             // Successfully updated the book, return the updated document
             res.send(data);
@@ -117,13 +117,13 @@ exports.updateBook = (req, res) => {
 
 exports.deleteBook = async (req, res) => {
     // #swagger.tags=["Books"]
-    const book_id = req.header("book_id");
+    const book_id = req.params.book_id
     if (!book_id) {
         return res.status(400).send({ message: "Please include a book ID!" })
     }
 
     if (!mongoose.Types.ObjectId.isValid(book_id)) {
-        return res.status(400).send({ message: "Invalid book ID!"})
+        return res.status(400).send({ message: "Invalid book ID!" })
     }
 
     try {
@@ -135,7 +135,8 @@ exports.deleteBook = async (req, res) => {
         }
 
         // Successfully deleted the book
-        res.status(200).send({ message: "Book deleted successfull"
+        res.status(200).send({
+            message: "Book deleted successfull"
         })
 
     } catch (err) {
