# swagger.json
@@ -5,7 +5,7 @@
     "description": "API for managing bookflow operations",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "bookflow-api-fgiu.onrender.com",
   "basePath": "/",
   "tags": [
     {
@@ -18,15 +18,25 @@
     }
   ],
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/": {
       "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/books": {
+      "get": {
         "tags": [
-          "Authors"
+          "Books"
         ],
-        "description": "Retrieve all authors",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -38,67 +48,55 @@
       },
       "post": {
         "tags": [
-          "Authors"
+          "Books"
         ],
         "description": "",
         "parameters": [
           {
-            "name": "author",
+            "name": "book",
             "in": "body",
-            "description": "Author object to be created",
+            "description": "Book object to be created",
             "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "author_first_name": {
+                "book_name": {
                   "type": "string",
-                  "example": "John"
+                  "example": "Book test two"
                 },
-                "author_last_name": {
+                "book_author": {
                   "type": "string",
-                  "example": "Doe"
+                  "example": "Ana Monteiro"
                 },
-                "author_birthdate": {
+                "book_genre": {
                   "type": "string",
-                  "example": "1980-01-01"
+                  "example": "Mistery"
                 },
-                "author_nationality": {
+                "book_summary": {
                   "type": "string",
-                  "example": "American"
+                  "example": "This is the summary for a test book 2."
                 },
-                "author_awards": {
-                  "type": "array",
-                  "example": [
-                    "Best Author 2020"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
+                "book_published": {
+                  "type": "string",
+                  "example": "2025"
                 },
-                "author_books": {
-                  "type": "array",
-                  "example": [],
-                  "items": {}
+                "book_isbn": {
+                  "type": "string",
+                  "example": "adjfklasdjfkl2893812"
                 },
-                "author_genres": {
-                  "type": "array",
-                  "example": [
-                    "Fiction",
-                    "Mystery"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
+                "book_pages": {
+                  "type": "number",
+                  "example": 500
                 }
               },
               "required": [
-                "author_first_name",
-                "author_last_name",
-                "author_birthdate",
-                "author_nationality",
-                "author_awards",
-                "author_books",
-                "author_genres"
+                "book_name",
+                "book_author",
+                "book_genre",
+                "book_summary",
+                "book_published",
+                "book_isbn",
+                "book_pages"
               ]
             }
           }
@@ -116,7 +114,7 @@
         }
       }
     },
-    "/{book_id}": {
+    "/books/{book_id}": {
       "get": {
         "tags": [
           "Books"
@@ -157,9 +155,52 @@
             "description": "ID of the book to update"
           },
           {
-            "name": "book_id",
-            "in": "header",
-            "type": "string"
+            "name": "book_data",
+            "in": "body",
+            "description": "Book object to be updated",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "book_name": {
+                  "type": "string",
+                  "example": "Updated Book Name"
+                },
+                "book_author": {
+                  "type": "string",
+                  "example": "Updated Author"
+                },
+                "book_genre": {
+                  "type": "string",
+                  "example": "Updated Genre"
+                },
+                "book_summary": {
+                  "type": "string",
+                  "example": "Updated summary for the book."
+                },
+                "book_published": {
+                  "type": "string",
+                  "example": "2025"
+                },
+                "book_isbn": {
+                  "type": "string",
+                  "example": "updatedisbn123456"
+                },
+                "book_pages": {
+                  "type": "number",
+                  "example": 600
+                }
+              },
+              "required": [
+                "book_name",
+                "book_author",
+                "book_genre",
+                "book_summary",
+                "book_published",
+                "book_isbn",
+                "book_pages"
+              ]
+            }
           }
         ],
         "responses": {
@@ -189,11 +230,6 @@
             "required": true,
             "type": "string",
             "description": "ID of the book to delete"
-          },
-          {
-            "name": "book_id",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
@@ -212,7 +248,106 @@
         }
       }
     },
-    "/{author_id}": {
+    "/authors": {
+      "get": {
+        "tags": [
+          "Authors"
+        ],
+        "description": "Retrieve all authors",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Authors"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "author",
+            "in": "body",
+            "description": "Author object to be created",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "author_first_name": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "author_last_name": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "author_birthdate": {
+                  "type": "string",
+                  "example": "1980"
+                },
+                "author_nationality": {
+                  "type": "string",
+                  "example": "American"
+                },
+                "author_awards": {
+                  "type": "array",
+                  "example": [
+                    "Best Author 2020"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "author_books": {
+                  "type": "array",
+                  "example": [
+                    "684451d6bfd928e1747ad0ee"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "author_genres": {
+                  "type": "array",
+                  "example": [
+                    "Fiction",
+                    "Mystery"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "required": [
+                "author_first_name",
+                "author_last_name",
+                "author_birthdate",
+                "author_nationality",
+                "author_awards",
+                "author_books",
+                "author_genres"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/authors/{author_id}": {
       "get": {
         "tags": [
           "Authors"
@@ -251,6 +386,70 @@
             "required": true,
             "type": "string",
             "description": "ID of the author to update"
+          },
+          {
+            "name": "author_data",
+            "in": "body",
+            "description": "Author object to be updated",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "author_first_name": {
+                  "type": "string",
+                  "example": "Updated First Name"
+                },
+                "author_last_name": {
+                  "type": "string",
+                  "example": "Updated Last Name"
+                },
+                "author_birthdate": {
+                  "type": "string",
+                  "example": "1985"
+                },
+                "author_nationality": {
+                  "type": "string",
+                  "example": "British"
+                },
+                "author_awards": {
+                  "type": "array",
+                  "example": [
+                    "Best Author 2021"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "author_books": {
+                  "type": "array",
+                  "example": [
+                    "684451d6bfd928e1747ad0ee"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "author_genres": {
+                  "type": "array",
+                  "example": [
+                    "Non-Fiction",
+                    "Science"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "required": [
+                "author_first_name",
+                "author_last_name",
+                "author_birthdate",
+                "author_nationality",
+                "author_awards",
+                "author_books",
+                "author_genres"
+              ]
+            }
           }
         ],
         "responses": {
